--- a/pets-portal/package.json
+++ b/pets-portal/package.json
@@ -13,8 +13,11 @@
     "@types/react-router-dom": "^5.1.3",
     "@types/react-select": "^3.0.11",
     "axios": "^0.19.2",
+    "bootstrap": "^4.4.1",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
+    "react-hook-form": "^5.1.1",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
     "react-select": "^3.0.8",
